# KG-RAG-datasets

./: LICENSE  README.md  pyproject.toml
earnings-calls/: README.md  run-evals.ipynb
earnings-calls/data/v1/: qna_data.csv
nih-clinical-trial-protocols/: README.md  download.csv  download.py
ntsb-aviation-incident-accident-reports/: README.md  download.csv  download.py
sec-10-q/: .gitignore  README.md  process_docs.ipynb
sec-10-q/data/: questions.csv  questions_small.csv  raw_data.csv  raw_data_small.csv
sec-10-q/data/raw_questions/: questions_mini.csv
sec-10-q/data/v1/: qna_data_mini.csv  questions_and_answers.csv
us-fed-agency-reports/: README.md
