[tool.poetry]
name = "krag-datasets"
version = "0.1.0"
description = "Knowledge Graph Retrieval Augmented Generation (KG-RAG) Eval Datasets"
authors = ["Docugami Inc <contact@docugami.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.348"
openai = "^1.3.8"
tiktoken = "^0.5.2"
docugami = "^0.1.2"
dgml-utils = "^0.3.0"
pandas = "^2.1.4"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
